--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,15 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+
+
+.card {
+  background-color: #ccc;
+  margin: 5px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.card.flipped {
+  background-color: rgba(223, 223, 223, .20);
 }
